# mlflow-doc-example

./: .env.template  .gitignore  Makefile  README.md  appendix.md  deploy.sh  evaluation.py  input_data.jsonl  notebook.py  pyproject.toml  simulate_traffic.py  test_deployment.py
backend/: evaluation.py  llm_utils.py  main.py  pyproject.toml  review_app.py  test_guide.py
databricks-app/: .gitignore  README.md  __init__.py  app.py  app.yaml  llm_utils.py  requirements.txt
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
sample_code/: custom_metrics.py  dataset.py  evaluate-ref.py  get_cred.py  guideline_complex.py  guideline_simple.py  hello.py  judge-concept-code.py  judge-concept.py  label-schema.py  label_session.py  labeling-session-v2.py  log_fbd.py  mlflow-search-traces-api.md  moody.py  predefined.py  prompt_judge.py  prompt_judge_sdk.py  pyproject.toml  search_traces_comprehensive.py  search_traces_examples.py
